--- a/TelefonRehberi/TelefonRehberi/TelefonRehberi.csproj
+++ b/TelefonRehberi/TelefonRehberi/TelefonRehberi.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Islemler.cs" />
     <Compile Include="Kisi.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
